2009-12-11  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] ImageDecoderQt: Fix retrieval of image file extensions

        QImageReader only allows retrieving the format() before actually reading the image.

        https://bugs.webkit.org/show_bug.cgi?id=32428

        * platform/graphics/qt/ImageDecoderQt.cpp:
        (WebCore::ImageDecoderQt::setData):
        (WebCore::ImageDecoderQt::internalDecodeSize):

git-svn-id: svn://svn.chromium.org/blink/trunk@51983 bbb929c8-8fbe-4397-9dbb-9b2b20218538